@@ -1,0 +1,16 @@
+# $NetBSD: Makefile,v 1.1 2019/07/31 01:26:54 brook Exp $
+
+CATEGORIES=	devel R
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	${R_HOMEPAGE_BASE}/withr/
+COMMENT=	Run code 'with' temporarily modified global state
+LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
+
+R_PKGNAME=	withr
+R_PKGVER=	2.1.2
+
+USE_LANGUAGES=	# none
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
