@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/07/31 01:26:54 brook Exp $
+
+SHA1 (R/withr_2.1.2.tar.gz) = f4b5b9914effc5789535e30fb6e63f92b3d8f033
+RMD160 (R/withr_2.1.2.tar.gz) = 410067839460a2579fad7a9ff4a3a9ea8766b9ce
+SHA512 (R/withr_2.1.2.tar.gz) = 23c521e2bfb241ebc6cdb0c6300f7531e28ab2ef2609aeef33459a7572b37dace8bf31370ab87cffe99bff54d51d37de453073e163a60e557097f7c5e5ce9560
+Size (R/withr_2.1.2.tar.gz) = 53578 bytes
